--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
@@ -18,7 +18,7 @@
                 <p>@GerardoAlfonso</p>
             </div>
             <div class="description">
-                <p>Portafolio - Normas y estandares de programacion</p>
+                <p>Portafolio - Normas y Estandares de Programación</p>
             </div>
             <div class="card-header">
                 <div class="card-1">
@@ -26,32 +26,61 @@
                     <p class="card-header-title">Periodo</p>
                 </div>
                 <div class="card-2">
-                    <p class="card-header-number">3</p>
-                    <p class="card-header-title">Tareas</p>
+                    <p class="card-header-number">7</p>
+                    <p class="card-header-title">Ejercicios</p>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="content">
         <div class="cards">
             <div class="card-generic">
-                <p class="card-title">Tarea 1</p>
-                <img src="homework.png" alt="Tarea 1">
+                <p class="card-title">Clase 09-08-2022 &nbsp; &nbsp;</p>
+                <div class="modal-container">
+                    <img src="/img/clase_09-08-2022.png" alt="Tarea 1">
+                </div>
             </div>
 
             <div class="card-generic">
-                <p class="card-title">Tarea 2</p>
-                <hr>
-                <img src="homework.png" alt="Tarea 2">
+                <p class="card-title">Clase 11-08-2022 parte 1</p>
+                <div class="modal-container">
+                    <img src="/img/Clase_11-08-2022_1.png" alt="Tarea 1">
+                </div>
             </div>
 
             <div class="card-generic">
-                <p class="card-title">Tarea 3</p>
-                <hr>
-                <img src="homework.png" alt="Tarea 3">
+                <p class="card-title">Clase 11-08-2022 parte 2</p>
+                <div class="modal-container">
+                    <img src="/img/Clase 11-08-2022_2.png" alt="Tarea 1">
+                </div>
+            </div>
+        </div>
+
+        <div class="cards second">
+            <div class="card-generic">
+                <p class="card-title">Clase 16-08-2022 &nbsp; &nbsp;</p>
+                <div class="modal-container">
+                    <img src="/img/Clase_16-08-2022.png" alt="Tarea 1">
+                </div>
+            </div>
+
+            <div class="card-generic">
+                <p class="card-title">Clase 11-08-2022 parte 1</p>
+                <div class="modal-container">
+                    <img src="/img/" alt="Tarea 1">
+                </div>
+            </div>
+
+            <div class="card-generic">
+                <p class="card-title">Clase 11-08-2022 parte 2</p>
+                <div class="modal-container">
+                    <img src="/img/" alt="Tarea 1">
+                </div>
             </div>
         </div>
     </div>
 
 </body>
+<script src="js/modal.js"></script>
 </html>
