primer periodo finalizado

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="card-header">
                 <div class="card-1">
                     <p class="card-header-number"> 1</p>
-                    <p class="card-header-title">Periodo</p>
+                    <p class="card-header-title">Periodos</p>
                 </div>
                 <div class="card-2">
                     <p class="card-header-number">7</p>
@@ -33,54 +33,8 @@
         </div>
     </div>
 
-    <div class="content">
-        <div class="cards">
-            <div class="card-generic">
-                <p class="card-title">Clase 09-08-2022 &nbsp; &nbsp;</p>
-                <div class="modal-container">
-                    <img src="/img/clase_09-08-2022.png" alt="Tarea 1">
-                </div>
-            </div>
-
-            <div class="card-generic">
-                <p class="card-title">Clase 11-08-2022 parte 1</p>
-                <div class="modal-container">
-                    <img src="/img/Clase_11-08-2022_1.png" alt="Tarea 1">
-                </div>
-            </div>
-
-            <div class="card-generic">
-                <p class="card-title">Clase 11-08-2022 parte 2</p>
-                <div class="modal-container">
-                    <img src="/img/Clase 11-08-2022_2.png" alt="Tarea 1">
-                </div>
-            </div>
-        </div>
-
-        <div class="cards second">
-            <div class="card-generic">
-                <p class="card-title">Clase 16-08-2022 &nbsp; &nbsp;</p>
-                <div class="modal-container">
-                    <img src="/img/Clase_16-08-2022.png" alt="Tarea 1">
-                </div>
-            </div>
-
-            <div class="card-generic">
-                <p class="card-title">Clase 11-08-2022 parte 1</p>
-                <div class="modal-container">
-                    <img src="/img/" alt="Tarea 1">
-                </div>
-            </div>
-
-            <div class="card-generic">
-                <p class="card-title">Clase 11-08-2022 parte 2</p>
-                <div class="modal-container">
-                    <img src="/img/" alt="Tarea 1">
-                </div>
-            </div>
-        </div>
-    </div>
-
 </body>
-<script src="js/modal.js"></script>
+<script>
+    window.location = ("/Periodos/1");
+</script>
 </html>
