correccion url periodos

--- a/Periodos/1/index.html
+++ b/Periodos/1/index.html
@@ -83,7 +83,7 @@
             <div class="card-generic">
                 <p class="card-title">Capitulo 1 Ejercicio 1 parte 1 &nbsp;</p>
                 <div class="modal-container">
-                    <img src="/img/preguntas1.png" alt="Tarea 1">
+                    <img src="img/preguntas1.png" alt="Tarea 1">
                 </div>
             </div>
 
