--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
             </div>
         </div>
     </div>
+    <div class="" id="periodo1">
+        <div class="back">
+            <div class="section-1" id="periodo1">
+                <a href="Periodos/1/" class="section-header-text"> Periodo 1</a>
+            </div>
+        </div>
+    </div>
 
 </body>
 <script>
-    window.location = ("/Periodos/1");
+    window.location = window.location.href.substring(0,52) + "Periodos/1/index.html";
 </script>
 </html>
