Correccion rutas absolutas de todas las imagenes al darle click al archivo index.html

--- a/Periodos/1/index.html
+++ b/Periodos/1/index.html
@@ -49,21 +49,21 @@
             <div class="card-generic">
                 <p class="card-title">Clase 09-08-2022 &nbsp; &nbsp;</p>
                 <div class="modal-container">
-                    <img src="/img/clase_09-08-2022.png" alt="Tarea 1">
+                    <img src="../../img/clase_09-08-2022.png" alt="Tarea 1">
                 </div>
             </div>
 
             <div class="card-generic">
                 <p class="card-title">Clase 11-08-2022 parte 1</p>
                 <div class="modal-container">
-                    <img src="/img/Clase_11-08-2022_1.png" alt="Tarea 1">
+                    <img src="../../img/Clase_11-08-2022_1.png" alt="Tarea 1">
                 </div>
             </div>
 
             <div class="card-generic">
                 <p class="card-title">Clase 11-08-2022 parte 2</p>
                 <div class="modal-container">
-                    <img src="/img/Clase 11-08-2022_2.png" alt="Tarea 1">
+                    <img src="../../img/Clase 11-08-2022_2.png" alt="Tarea 1">
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
             <div class="card-generic">
                 <p class="card-title">Clase 16-08-2022 &nbsp; &nbsp;</p>
                 <div class="modal-container">
-                    <img src="/img/Clase_16-08-2022.png" alt="Tarea 1">
+                    <img src="../../img/Clase_16-08-2022.png" alt="Tarea 1">
                 </div>
             </div>
         </div>
@@ -83,21 +83,21 @@
             <div class="card-generic">
                 <p class="card-title">Capitulo 1 Ejercicio 1 parte 1 &nbsp;</p>
                 <div class="modal-container">
-                    <img src="img/preguntas1.png" alt="Tarea 1">
+                    <img src="../../img/preguntas1.png" alt="Tarea 1">
                 </div>
             </div>
 
             <div class="card-generic">
                 <p class="card-title">Capitulo 1 Ejercicio 1 parte 2 &nbsp;</p>
                 <div class="modal-container">
-                    <img src="/img/preguntas2.png" alt="Tarea 1">
+                    <img src="../../img/preguntas2.png" alt="Tarea 1">
                 </div>
             </div>
 
             <div class="card-generic">
                 <p class="card-title">Capitulo 2 ejercicio 1</p>
                 <div class="modal-container">
-                    <img src="/img/screen2.2.jpeg" alt="Tarea 1">
+                    <img src="../../img/screen2.2.jpeg" alt="Tarea 1">
                 </div>
             </div>
         </div>
@@ -106,21 +106,21 @@
             <div class="card-generic">
                 <p class="card-title">Capitulo 3 ejercicio 1</p>
                 <div class="modal-container">
-                    <img src="/img/screen3.1.jpeg" alt="Tarea 1">
+                    <img src="../../img/screen3.1.jpeg" alt="Tarea 1">
                 </div>
             </div>
 
             <div class="card-generic">
                 <p class="card-title">Capitulo 3 ejercicio 2</p>
                 <div class="modal-container">
-                    <img src="/img/screen3.2.jpeg" alt="Tarea 1">
+                    <img src="../../img/screen3.2.jpeg" alt="Tarea 1">
                 </div>
             </div>
 
             <div class="card-generic">
                 <p class="card-title">Capitulo 3 ejercicio 3</p>
                 <div class="modal-container">
-                    <img src="/img/screen3.3.jpeg" alt="Tarea 1">
+                    <img src="../../img/screen3.3.jpeg" alt="Tarea 1">
                 </div>
             </div>
         </div>
