correccion final periodo 1 rutas web y redireccion automatica

--- a/Periodos/1/index.html
+++ b/Periodos/1/index.html
@@ -126,7 +126,7 @@
         </div>
     </div>
 
-    <div class="active" id="back-box">
+    <div class="active" id="back-box" style="margin-bottom: 4rem;">
         <div class="back">
             <div class="section-1" id="back">
                 <p class="section-header-text"> Regresar</p>
