--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="" id="periodo1">
+    <div class="" id="periodo1" >
         <div class="back">
             <div class="section-1" id="periodo1">
                 <a href="Periodos/1/" class="section-header-text"> Periodo 1</a>
@@ -42,6 +42,6 @@
 
 </body>
 <script>
-    window.location = window.location.href.substring(0,52) + "Periodos/1/index.html";
+    window.location = window.location.href.replace("index.html", "") + "Periodos/1/index.html";
 </script>
 </html>
